--- a/src/App.css
+++ b/src/App.css
@@ -62,7 +62,7 @@ h1:hover {
 .down_image {
   font-size: 25px;
   text-decoration: none;
-  margin: 15px auto 0 auto;
+  margin: 25px auto 10px auto;
   background-color: teal;
   color: white;
   padding: 10px;
@@ -73,18 +73,33 @@ h1:hover {
 .img_div {
   color: white;
   flex: 1;
-  min-height: 75vh;
+  min-height: 80vh;
   display: flex;
   align-items: center;
   justify-content: center;
   border: 2px solid orange;
+
+  overflow-x: auto;
+  overflow-y: auto;
 }
 
 .res_img {
-  object-fit: cover;
-  max-width: 100%;
-  max-height: 100%;
-  overflow: auto;
+  width: 100%;
+  height: 100%;
+}
+
+.features {
+  margin-top: 10px;
+  font-size: 30px;
+  display: flex;
+  min-height: 50%;
+  flex-direction: column;
+  justify-content: flex-start;
+  margin-left: 20px;
+}
+
+.features > div {
+  margin-bottom: 20px;
 }
 
 @media only screen and (max-width: 1240px) {
