--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,32 @@
+body {
+  font-family: "Cinzel Decorative", cursive;
+  padding-left: 30px;
+}
+
+input[type="radio"] {
+  height: 20px;
+  width: 20px;
+}
+
 h1 {
   color: white;
   font-size: 4rem;
   letter-spacing: 1px;
+  margin-bottom: 10px;
 }
 
 h1:hover {
-  color: purple;
+  color: blue;
+}
+
+p {
+  color: white;
+  margin-top: 0;
+  font-size: 20px;
+}
+p > a {
+  text-decoration: none;
+  color: blue;
 }
 
 .main_div {
@@ -73,7 +94,7 @@ h1:hover {
 .img_div {
   color: white;
   flex: 1;
-  min-height: 80vh;
+  min-height: 75vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -99,7 +120,10 @@ h1:hover {
 }
 
 .features > div {
+  margin-top: 10px;
   margin-bottom: 20px;
+  padding-bottom: 10px;
+  border-bottom: 1px solid yellow;
 }
 
 @media only screen and (max-width: 1240px) {
