--- a/src/App.css
+++ b/src/App.css
@@ -9,14 +9,14 @@ input[type="radio"] {
 }
 
 h1 {
-  color: white;
+  color: blue;
   font-size: 4rem;
   letter-spacing: 1px;
   margin-bottom: 10px;
 }
 
 h1:hover {
-  color: blue;
+  color: orange;
 }
 
 p {
@@ -58,7 +58,7 @@ p > a {
 }
 
 .inp {
-  font-size: 25px;
+  font-size: 21px;
   padding: 10px;
   border: 3px solid orange;
 
